--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>
-        home chal gaya hai bro !!!
+        Todo List
     </h1>
 
     <script type="text/javascript" src="../assets/JS/script.js"></script>
