--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <script src="https://kit.fontawesome.com/50d3f01cf7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/CSS/styles.css">
     <title><%= title %></title>
-    <link rel="stylesheet" type="text/css" href="/assets/CSS/style.css" />
   </head>
 
   <body>
@@ -58,6 +58,6 @@
       </ul>
     </main>
 
-    <script src="/assets/JS/script.js"></script>
+    <script type="text/javascript" src="/assets/JS/script.js"></script>
   </body>
 </html>
