--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,5 +1,6 @@
 :root{
     --form-border-color: lightgrey;
+    --bg-color: white;
   }
   
   body{
@@ -71,6 +72,7 @@
   
   .form-input:focus{
     outline: none;
+    background-color: var(--bg-color);
   }
   
   #btn{
