--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://kit.fontawesome.com/50d3f01cf7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/assets/CSS/styles.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
     <title><%= title %></title>
   </head>
 
@@ -49,15 +49,11 @@
               <p><i class="fa-regular fa-calendar-days"></i>&emsp;june 12, 2023</p>
             </div>
           </label>
-          <div class="cate-card">Personal</div>
-        </li>
-        <li class="task">
-        </li>
-        <li class="task">
+          <!-- <div class="cate-card">Personal</div> -->
         </li>
       </ul>
     </main>
 
-    <script type="text/javascript" src="/assets/JS/script.js"></script>
+    <script type="text/javascript" src="/JS/script.js"></script>
   </body>
 </html>
