--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
       <form id="task-form" action="/add-task" method="POST">
         <div id="desc">
           <label class="form-heading" for="description">Description</label><br>
-          <input class="form-input" type="text" required name="des" placeholder="What do you need to do?">
+          <input class="form-input" type="text" required name="description" placeholder="What do you need to do?">
         </div>
         <div id="cate">
           <label class="form-heading" for="category">category</label><br>
@@ -35,10 +35,12 @@
             <i class="fa-solid fa-plus"></i>
             <p>add task</p>
           </button>
-          <button class="btn" style="padding: 0;  background-color: red;">
-            <i class="fa-solid fa-trash-can"></i>
-            <p>delete tasks</p>
-          </button>
+          <!-- <button class="btn" disabled style="padding: 0;  background-color: red;">
+            <a href="/delete-task" style="width: 100%;">
+              <i class="fa-solid fa-trash-can"></i>
+              <p>delete tasks</p>
+            </a>
+          </button> -->
         </div>
       </form>
 
@@ -55,8 +57,8 @@
         </li>
         <% for(let task of task_list){ %>
           <li class="task">
-            <input type="checkbox" name="check">
-            <label for="check">
+            <input type="checkbox" name="<%= task.category %>" id="<%= task.description%>">
+            <label for="<%= task.category %>">
               <div class="task-title">
                 <p><%= task.description %></p>
                 <p><i class="fa-regular fa-calendar-days"></i>&emsp;june 12, 2023</p>
