--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,7 +60,7 @@
       </form>
     </main>
 
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
     <script type="text/javascript">
       const month = ["January","February","March","April","May","June","July","August","September","October","November","December"];
     </script>
