--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 
   <body>
     <main>
-      <h1>TODO App</h1>
+      <h1>Task Manager App</h1>
 
       <form id="task-form" action="/add-task" method="POST">
         <div id="desc">
